--- a/package.json
+++ b/package.json
@@ -2,8 +2,17 @@
   "name": "url-short",
   "version": "0.1.0",
   "description": "URL Shortener",
-  "main": "index.ts",
+  "main": "src/index.ts",
   "author": "William Darian",
   "license": "MIT",
-  "private": true
+  "private": true,
+  "dependencies": {
+    "express": "^4.17.1",
+    "ts-node": "^10.2.1",
+    "typescript": "^4.3.5"
+  },
+  "devDependencies": {
+    "@types/express": "^4.17.13",
+    "@types/node": "^16.7.2"
+  }
 }
