--- a/package.json
+++ b/package.json
@@ -6,7 +6,11 @@
   "author": "William Darian",
   "license": "MIT",
   "private": true,
+  "scripts": {
+    "start": "ts-node --files src"
+  },
   "dependencies": {
+    "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "qs": "^6.10.1",
     "sequelize": "^6.6.5",
